# ujep

./: .gitignore  README.md  pyproject.toml
apr2/cviceni/: pyproject.toml
apr2/cviceni/01/: __main__.py
apr2/cviceni/02/: __main__.py
apr2/cviceni/03/: __main__.py
apr2/cviceni/04/: __main__.py  test.ipynb
cas/: CAS_cviceni1.R
msf/: pyproject.toml
msf/04/: __main__.ipynb
msf/05/: main.ipynb
msf/06/: main.ipynb
msf/07/: main.ipynb
msf/msf/: emg.ipynb  main.ipynb
msf/src/: blur.ipynb  emg.ipynb  sir_model.ipynb
msw/: graphs_export.odt  requirements.txt
msw/02/: __main__.py
msw/03/: __main__.py  main.ipynb  pyproject.toml
msw/src/: emg.ipynb
num/: 02.R  03.R  04.R  05.R  06.R  07.R  09.R  10.R  O8.R
oonv/AbstractFactory/: AbstractFactory.sln
oonv/Adapter/: Adapter.sln
oonv/Bridge/: Bridge.sln
oonv/Builder/: Builder.sln
oonv/Composite/: Composite.sln
oonv/ConsoleApp1/: ConsoleApp1.sln
oonv/Decorator/: Decorator.sln
oonv/Facade/: Facade.sln
oonv/FlyWeight/: FlyWeight.sln
oonv/Prototype/: Prototype.sln
oonv/Proxy/: Proxy.sln
oonv/Singleton01/: Singleton01.sln
oonv/Strategy/: Strategy.sln
oonv/TemplateMethod/: TemplateMethod.sln
oonv/oonv/: oonv.sln
ops/: doc.txt  script.sh  soubor.txt  ucimse.sh
ops/zapocet/: zapocet_09_2024.sh
pzs/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb
usu/: 01_pre.ipynb  1-Ulohy strojového učení.ipynb
zkb/: 01 14. otázka.md
zkb/.obsidian/: graph.json  workspace.json
zzd/cviceni/: 01.R  02.R  03.R  04.R  asd.qmd  last.R  t.Rmd
zzd/zapocet/: .RData  .Rhistory  asd.Rmd
(+32 files in other folders)
